--- a/projects/crud/src/lib/components/history/history.component.html
+++ b/projects/crud/src/lib/components/history/history.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2 mat-dialog-title style="padding:10px;">
-        <span> History</span>
+        <span> {{ 'History' | translate }}</span>
         <mat-icon class="cancel_icon"
          (click)="closeDialog()">cancel
         </mat-icon>
