--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -2,7 +2,7 @@
 
     <ng-container *ngSwitchCase="'boolean'">
         <div class="checkbox-container">
-            <mat-checkbox matInput class="crud_checkbox" id="{{config?.name}}-field" [formControlName]="config.name" color="primary" attr.data-cy="{{config.label | getSelector}}-checkbox">{{ config.label }}</mat-checkbox>
+            <mat-checkbox matInput class="crud_checkbox" id="{{config?.name}}-field" [formControlName]="config.name" color="primary" attr.data-cy="{{config.label | getSelector}}-checkbox">{{ config.label | translate }}</mat-checkbox>
         </div>
     </ng-container>
 
@@ -15,11 +15,11 @@
     </ng-container>
 
     <mat-form-field *ngSwitchCase="'date'">
-        <mat-label>{{ config?.label }}</mat-label>
+        <mat-label>{{ config?.label | translate }}</mat-label>
         <input matInput [formControlName]="config?.name" id="{{config?.label | getSelector}}-input"
          attr.data-cy="{{config.label | getSelector}}-input" [matDatepicker]="myDatepicker" />
         <mat-error *ngIf="f[config.name].hasError('required') && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-required-error">
-            this field is required</mat-error>
+            {{ 'this field is required' | translate }}</mat-error>
         <mat-datepicker-toggle matSuffix [for]="myDatepicker" style="color: #2A55A2"></mat-datepicker-toggle>
         <mat-datepicker [startAt]="config?.DatePickerStartAt" #myDatepicker></mat-datepicker>
     </mat-form-field>
@@ -49,19 +49,19 @@
 
     <!-- this fallsback from number and text -->
     <mat-form-field *ngSwitchDefault>
-        <mat-label>{{ config?.label }}</mat-label>
+        <mat-label>{{ config?.label | translate }}</mat-label>
         <input matInput [formControlName]="config?.name" attr.data-cy="{{config.label | getSelector}}-input" id="{{config?.name}}-field" [maxlength]="config?.maxlength" [required]="f[config?.name].hasError('required') && mode !== 'search'" [type]="config?.control ? config?.control.type : 'text'" [readonly]="config.disabled !== undefined ? config.disabled : false"/>
         <ng-container *ngIf="mode !== 'search'">
             <mat-error *ngIf="f[config.name].hasError('required') && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-required-error">
-                this field is required</mat-error>
+                {{ 'this field is required' | translate }}</mat-error>
             <mat-error *ngIf="f[config.name].hasError('maxlength') && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-maxLength-error">
-                max length is {{config?.maxlength}} characters</mat-error>
+                {{ 'max length is' | translate }} {{config?.maxlength}} {{ 'characters' | translate }}</mat-error>
             <mat-error *ngIf="f[config.name].hasError('pattern') && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-pattern-error">
-                {{getFieldErrorMessage("pattern")? getFieldErrorMessage("pattern"): "pattern for this field is invalid"}}
+                {{getFieldErrorMessage("pattern")? (getFieldErrorMessage("pattern") | translate) : ("pattern for this field is invalid" | translate)}}
             </mat-error>
-            <mat-error *ngIf="(f[config.name].hasError('min') || f[config.name].hasError('max')) 
+            <mat-error *ngIf="(f[config.name].hasError('min') || f[config.name].hasError('max'))
             && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-min-max-error">
-                {{getFieldErrorMessage("minOrMax") ? getFieldErrorMessage("minOrMax"): "Wrong minimum or maximum value."}}
+                {{getFieldErrorMessage("minOrMax") ? (getFieldErrorMessage("minOrMax") | translate) : ("Wrong minimum or maximum value." | translate)}}
             </mat-error>
         </ng-container>
     </mat-form-field>
