Add translation support for column headers, fieldset headers, and attachment button
- Add translate pipe to column headers in listing component
- Add translate pipe to fieldset/formset labels in model-form component
- Add translate pipe to "Add Attachment" button in file-upload component
- Bump version to 5.11.19

--- a/projects/crud/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
 <label class="fileContainer">
-    Add Attachment
+    {{ 'Add Attachment' | translate }}
     <input type="file" id="file" />
 </label>
